<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".splash.SplashFragment"
        android:id="@+id/constraintLayout">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/login_fragment_vertical_margin"
            android:layout_marginEnd="@dimen/login_fragment_vertical_margin"
            app:layout_constraintVertical_bias="0.32999998">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/sign_on_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_toptext_tv"
                    style="@style/AppTheme.TitleTextView"/>

            <ImageView
                    android:id="@+id/registration_logo_image"
                    android:src="@drawable/im_logo_with_text"
                    android:contentDescription="@string/cd_splash_screen_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_username_editlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/username"
                    android:autofillHints="username"
                    android:ems="10"
                    android:drawableStart="@drawable/selector_account_ic"
                    android:drawablePadding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password_editlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:autofillHints="password"
                    android:ems="10"
                    android:drawableStart="@drawable/selector_password_ic"
                    android:drawablePadding="8dp"
                    app:passwordToggleEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_email_editlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:helperText="@string/optional_field">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:drawableStart="@drawable/selector_email_ic"
                    android:drawablePadding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

        <Button
                android:text="@string/sign_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration_sign_on_button"
                android:layout_gravity="center"
                style="@style/AppTheme.ButtonAccent"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

        <Button
                android:text="@string/back_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration_back_to_login"
                style="@style/AppTheme.ButtonPrimary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>